{
  "version": 4,
  "terraform_version": "1.16.2",
  "serial": 34,
  "lineage": "1077a10f-6b71-faaf-c623-1b5d80f5249d",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:308413201185:vpc/vpc-083f935f9d4e3abfe",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-040d7f19fbce3f5cf",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-0c44226c05207f26c",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-083f935f9d4e3abfe",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0a9609a721af8b6b7",
            "owner_id": "308413201185"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:308413201185:security-group/sg-0975b4451d91bdca2",
            "description": "RouteExplorer ECS security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0975b4451d91bdca2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "routeexplorer-ecs-sg",
            "name_prefix": "",
            "owner_id": "308413201185",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "environment": "prod",
              "managed_by": "terraform",
              "project": "routeexplorer"
            },
            "timeouts": null,
            "vpc_id": "vpc-083f935f9d4e3abfe"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:308413201185:security-group/sg-08e82901fb9983ed0",
            "description": "RouteExplorer RDS security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08e82901fb9983ed0",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0975b4451d91bdca2"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "routeexplorer-rds-sg",
            "name_prefix": "",
            "owner_id": "308413201185",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "environment": "prod",
              "managed_by": "terraform",
              "project": "routeexplorer"
            },
            "timeouts": null,
            "vpc_id": "vpc-083f935f9d4e3abfe"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.ecs",
            "data.aws_vpc.default"
          ]
        }
      ]
    }
  ]
}